dark mode and few fixes

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1,3 +1,6 @@
+*{
+    background-color: #0D1117;
+}
 .online{
     font-size:30px;
     font-weight: 500;
